--- a/styles/style.scss
+++ b/styles/style.scss
@@ -96,6 +96,54 @@ main {
     box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2);
   }
 
+  .dice--winner--left {
+    position: absolute;
+    left: 50%;
+    top: 12.5rem;
+    transform: translateX(-50%);
+    height: 10rem;
+    font-size: 15rem;
+    color: white;
+    -webkit-filter: drop-shadow(5px 5px 5px #222);
+    filter: drop-shadow(5px 5px 5px #222);
+  }
+
+  .dice--winner--left::before {
+    content: "WINNER!";
+    color: rgb(252, 244, 3);
+    position: absolute;
+    font-weight: bold;
+    top: 40px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: block;
+    font-size: 0.2em;
+  }
+
+  .dice--winner--right {
+    position: absolute;
+    left: 50%;
+    top: 12.5rem;
+    transform: translateX(-50%);
+    height: 10rem;
+    text-align: center;
+    font-size: 15rem;
+    color: white;
+    -webkit-filter: drop-shadow(5px 5px 5px #222);
+    filter: drop-shadow(5px 5px 5px #222);
+  }
+  .dice--winner--right::before {
+    content: "WINNER!";
+    color: rgb(252, 244, 3);
+    position: absolute;
+    font-weight: bold;
+    top: 40px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: block;
+    font-size: 0.2em;
+  }
+
   .player--winner {
     background-color: #2f2f2f;
   }
@@ -157,4 +205,27 @@ section {
       margin: 0px;
     }
   }
+}
+
+.player--active {
+  background-color: rgba(255, 255, 255, 0.4);
+}
+.player--active .name {
+  font-weight: 700;
+}
+.player--active .score {
+  font-weight: 400;
+}
+
+.player--active .current {
+  opacity: 1;
+}
+
+.player--winner {
+  background-color: #2f2f2f;
+}
+
+.player--winner .name {
+  font-weight: 700;
+  color: #c7365f;
 }
